// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddRecipeForm component > render empty form 1`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="name"
      >
        Name
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="description"
      >
        Description
      </label>
      <div
        class="col-sm-10"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="Name and optionally amount (paprikas 3, sugar 250g, etc.)"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (4 plates, 800g, etc.)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <div
          class="btn-group"
        >
          <button
            class="btn btn-primary"
            type="submit"
          >
            <svg
              class="bi bi-check2"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
              />
            </svg>
             Submit 
          </button>
          <button
            class="btn btn-outline-secondary"
            type="reset"
          >
            <svg
              class="bi bi-x"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
              />
            </svg>
             Reset 
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 1`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="name"
      >
        Name
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some name error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="description"
      >
        Description
      </label>
      <div
        class="col-sm-10"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="Name and optionally amount (paprikas 3, sugar 250g, etc.)"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (4 plates, 800g, etc.)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <div
          class="btn-group"
        >
          <button
            class="btn btn-primary"
            type="submit"
          >
            <svg
              class="bi bi-check2"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
              />
            </svg>
             Submit 
          </button>
          <button
            class="btn btn-outline-secondary"
            type="reset"
          >
            <svg
              class="bi bi-x"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
              />
            </svg>
             Reset 
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 2`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="name"
      >
        Name
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="description"
      >
        Description
      </label>
      <div
        class="col-sm-10"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some description error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="Name and optionally amount (paprikas 3, sugar 250g, etc.)"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="invalid-feedback d-block"
          >
            Some ingredient error.
          </div>
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="invalid-feedback d-block"
          >
            Some method step error.
          </div>
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (4 plates, 800g, etc.)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <div
          class="btn-group"
        >
          <button
            class="btn btn-primary"
            type="submit"
          >
            <svg
              class="bi bi-check2"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
              />
            </svg>
             Submit 
          </button>
          <button
            class="btn btn-outline-secondary"
            type="reset"
          >
            <svg
              class="bi bi-x"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
              />
            </svg>
             Reset 
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 3`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="name"
      >
        Name
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="description"
      >
        Description
      </label>
      <div
        class="col-sm-10"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="Name and optionally amount (paprikas 3, sugar 250g, etc.)"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-sm-10"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some cooking time error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-sm-2 col-form-label"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (4 plates, 800g, etc.)"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some portion size error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <div
          class="btn-group"
        >
          <button
            class="btn btn-primary"
            type="submit"
          >
            <svg
              class="bi bi-check2"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
              />
            </svg>
             Submit 
          </button>
          <button
            class="btn btn-outline-secondary"
            type="reset"
          >
            <svg
              class="bi bi-x"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
              />
            </svg>
             Reset 
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
